Version 2.0 - 2018-04-13
* BUG#8576 Compare the endorsement effect date to option initial start date when deleting a beneficiary.

Version 1.14 - 2017-11-09
* BUG#6483 Initialize options in new covered element endorsement
* BUG#6644 Add a default motive on new extra_premium endorsement
* BUG#6510 Handle contract status in extra_premium endorsement

Version 1.12 - 2017-04-28
* FEA#0000 Rework covered element modification UI

Version 1.10 - 2016-11-02

Version 1.8 - 2016-07-06
* FEA#0000 Add option exclusions modifications

Version 1.6 - 2015-12-23
* FEA#0000 Add covered element modification endorsement
* FEA#0000 remove_option endorsement allows to void an option

Version 1.4 - 2015-05-29
* FEA#0000 Add remove_option endorsement

Version 1.3 - 2015-01-22
* FEA#0000 Add extra_premium endorsement
* FEA#0000 Add new_covered_element_option endorsement

Version 1.2 - 2014-07-01
* FEA#0000 Changelog file creation