@@ -1,3 +1,5 @@
+* BUG#9260 Correction d'un bug de navigation causant des doublons sur certaines garanties
+
 Version 2.0 - 2018-04-13
 * BUG#8576 Compare la date d'effet de l'avenant de suppression de bénéficiaire avec la date de début initiale de l'option.
 
