@@ -1,3 +1,5 @@
+* BUG#9260 Fix a next / previous bug where options on a new covered element were duplicated
+
 Version 2.0 - 2018-04-13
 * BUG#8576 Compare the endorsement effect date to option initial start date when deleting a beneficiary.
 
